testsuite/tests/rep-poly/RepPolyMatch.stderr

RepPolyMatch.hs:11:9: error:
    • The first pattern in the case alternative
      does not have a fixed runtime representation.
      Its type is:
        a :: TYPE rep
    • In the expression: \case
      In an equation for ‘match’: match = \case
